--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "compile": "hardhat compile"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.17.8",
     "dotenv": "^17.2.3",
     "ethers": "^6.15.0",
     "next": "16.0.3",
