--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,14 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "hardhat.config.ts",
+    "hardhat.config.example.ts",
+    "hardhat.config.js",
+    "tsconfig.hardhat.json",
+    "scripts/**/*",
+    "fdc-client/**/*",
+    "verifier-server/**/*"
+  ]
 }
