--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parlaymarket",
   "version": "0.1.0",
   "private": true,
-  "description": "Decentralized parlay marketplace on Flare Network",
+  "description": "Decentralized parlay platform on Flare Network",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
